--- a/pages/landing.html
+++ b/pages/landing.html
@@ -34,6 +34,231 @@
             </div>
           </div>
         </section>
+        <section class="row section">
+          <div class="row__container container">
+            <div class="row__body">
+              <div class="row__image">
+                <img src="/images/1.webp" alt="" />
+              </div>
+              <div class="row__content custom-ol">
+                <h2>Private Pay for Home Care</h2>
+                <p>
+                  Private Pay offers families the flexibility to get premium, personalized home care services without
+                  the restrictions of government-funded programs. At Golden Care, we specialize in working with private
+                  pay clients, ensuring you or your loved one receives the highest level of care from licensed, bonded,
+                  and insured caregivers.
+                </p>
+                <h3>Why Choose Golden Care for Private Pay?</h3>
+                <ol>
+                  <li>Exclusive focus on quality care.</li>
+                  <li>Trained, vetted caregivers who are W-2 employees (not contractors).</li>
+                  <li>Services tailored to individual needs.</li>
+                </ol>
+                <p>
+                  We are approved by the VA and recognized as representatives to provide home care benefits covered by
+                  the VA for those who qualify.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="row row_reverse section">
+          <div class="row__container container">
+            <h2 class="row__title">Long-Term Care Insurance (LTCI)</h2>
+            <div class="row__body">
+              <div class="row__image">
+                <img src="/images/2.webp" alt="" />
+              </div>
+              <div class="row__content custom-ol">
+                <h3>Simplifying Your Care Journey with Long-Term Care Insurance</h3>
+                <p>
+                  At Golden Care, we know that navigating Long-Term Care Insurance (LTCI) can feel overwhelming. That’s
+                  why we’re here to make the process simple and stress-free.
+                </p>
+                <h3>What is LTCI?</h3>
+                <p>
+                  Long-Term Care Insurance is a policy that helps cover the cost of non-medical home care services, such
+                  as personal care, companionship, and homemaker services.
+                </p>
+                <h3>How We Help:</h3>
+                <ul>
+                  <li>We assist with understanding your policy benefits.</li>
+                  <li>We handle the paperwork and claims process.</li>
+                  <li>We ensure you're maximizing your coverage for the care you need.</li>
+                </ul>
+                <p class="colored">
+                  Let us focus on the details so you can focus on what matters most—your loved one’s comfort and
+                  well-being.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="row custom-ol section">
+          <div class="row__container container">
+            <div class="row__body">
+              <div class="row__image">
+                <img src="/images/3.webp" alt="" />
+              </div>
+              <div class="row__content">
+                <h2>Home Care for Heroes</h2>
+                <p>At Golden Care, we honor our heroes by providing specialized care programs for veterans.</p>
+                <h3>Veterans Benefits May Cover Home Care Services:</h3>
+                <ol>
+                  <li>Assistance with daily living (bathing, dressing, grooming).</li>
+                  <li>Homemaker and companionship care.</li>
+                  <li>Transitional care after hospital discharge.</li>
+                </ol>
+                <p>
+                  We are approved by the VA and recognized as representatives to provide home care benefits covered by
+                  the VA for those who qualify.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="cta section">
+          <div class="cta__container container">
+            <div class="cta__body" style="background-image: url(&quot;/images/Group 6.webp&quot;)">
+              <div class="cta__content">
+                <h2>Have Questions? Call Us Now at (239) 440-2900</h2>
+                <a href="#" class="cta__button button">Call Us</a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="services section">
+          <div class="services__container container">
+            <div class="services__header">
+              <h2 class="services__title">Our Home Care Services</h2>
+              <p class="services__text">
+                Golden Care offers a comprehensive range of non-medical home care services designed to meet the unique
+                needs of every individual. <br />
+                Each care plan is tailored to enhance your loved one’s comfort, dignity, and independence.
+              </p>
+            </div>
+            <section class="services__list">
+              <div class="services__item service">
+                <span class="service__icon"></span>
+                <div class="service__content">
+                  <h3>Personal Care</h3>
+                  <p>Bathing, grooming, toileting, feeding, dressing, ambulation, and injury prevention.</p>
+                </div>
+              </div>
+              <div class="services__item service">
+                <span class="service__icon service__icon_rb"></span>
+                <div class="service__content">
+                  <h3>Homemaker & Companion Care</h3>
+                  <p>Meal preparation, grocery shopping, light housekeeping, transportation, and companionship.</p>
+                </div>
+              </div>
+              <div class="services__item service">
+                <span class="service__icon service__icon_circle"></span>
+                <div class="service__content">
+                  <h3>Transitional Care</h3>
+                  <p>Assistance with hospital or rehab discharge and recovery at home.</p>
+                </div>
+              </div>
+              <div class="services__item service">
+                <span class="service__icon service__icon_rt"></span>
+                <div class="service__content">
+                  <h3>Alzheimer’s/Dementia Care</h3>
+                  <p>Specialized care for individuals with memory-related conditions.</p>
+                </div>
+              </div>
+            </section>
+          </div>
+        </section>
+        <section class="testimonials section">
+          <div class="testimonials__container container">
+            <h2 class="testimonials__title">What Our Clients Say</h2>
+            <div class="testimonials__body">
+              <div class="testimonials__navigation">
+                <button type="button" class="testimonials__navigation-button testimonials__prev">
+                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g id="Icon / left-arrow-alt">
+                      <path
+                        id="icon"
+                        d="M12.707 18.0706L8.414 13.7776H18V11.7776H8.414L12.707 7.48456L11.293 6.07056L4.586 12.7776L11.293 19.4846L12.707 18.0706Z"
+                        fill="black"
+                      />
+                    </g>
+                  </svg>
+                </button>
+                <button type="button" class="testimonials__navigation-button testimonials__next">
+                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g id="Icon / left-arrow-alt">
+                      <path
+                        id="icon"
+                        d="M12.707 18.0706L8.414 13.7776H18V11.7776H8.414L12.707 7.48456L11.293 6.07056L4.586 12.7776L11.293 19.4846L12.707 18.0706Z"
+                        fill="black"
+                      />
+                    </g>
+                  </svg>
+                </button>
+              </div>
+              <div class="testimonials__slider swiper-slider" id="testimonials-slider">
+                <div class="testimonials__wrapper swiper-wrapper">
+                  <div class="testimonials__item testimonial swiper-slide">
+                    <img src="/images/rating.svg" alt="" class="testimonial__rating" />
+                    <p class="testimonial__text">
+                      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                      elementum tristique. Duis cursus, mi quis viverra ornare."
+                    </p>
+                    <p class="testimonial__name">Name Surname</p>
+                    <p class="testimonial__role">Position, Company name</p>
+                  </div>
+                  <div class="testimonials__item testimonial swiper-slide">
+                    <img src="/images/rating.svg" alt="" class="testimonial__rating" />
+                    <p class="testimonial__text">
+                      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                      elementum tristique. Duis cursus, mi quis viverra ornare."
+                    </p>
+                    <p class="testimonial__name">Name Surname</p>
+                    <p class="testimonial__role">Position, Company name</p>
+                  </div>
+                  <div class="testimonials__item testimonial swiper-slide">
+                    <img src="/images/rating.svg" alt="" class="testimonial__rating" />
+                    <p class="testimonial__text">
+                      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                      elementum tristique. Duis cursus, mi quis viverra ornare."
+                    </p>
+                    <p class="testimonial__name">Name Surname</p>
+                    <p class="testimonial__role">Position, Company name</p>
+                  </div>
+                  <div class="testimonials__item testimonial swiper-slide">
+                    <img src="/images/rating.svg" alt="" class="testimonial__rating" />
+                    <p class="testimonial__text">
+                      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                      elementum tristique. Duis cursus, mi quis viverra ornare."
+                    </p>
+                    <p class="testimonial__name">Name Surname</p>
+                    <p class="testimonial__role">Position, Company name</p>
+                  </div>
+                  <div class="testimonials__item testimonial swiper-slide">
+                    <img src="/images/rating.svg" alt="" class="testimonial__rating" />
+                    <p class="testimonial__text">
+                      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                      elementum tristique. Duis cursus, mi quis viverra ornare."
+                    </p>
+                    <p class="testimonial__name">Name Surname</p>
+                    <p class="testimonial__role">Position, Company name</p>
+                  </div>
+                  <div class="testimonials__item testimonial swiper-slide">
+                    <img src="/images/rating.svg" alt="" class="testimonial__rating" />
+                    <p class="testimonial__text">
+                      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                      elementum tristique. Duis cursus, mi quis viverra ornare."
+                    </p>
+                    <p class="testimonial__name">Name Surname</p>
+                    <p class="testimonial__role">Position, Company name</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonials__pagination pagination"></div>
+          </div>
+        </section>
       </main>
       {{> footer}}
     </div>
