feat: enhance landing page with new section and footer structure

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -259,6 +259,30 @@
             <div class="testimonials__pagination pagination"></div>
           </div>
         </section>
+        <section class="row row_small-gap section">
+          <div class="row__container container">
+            <h2 class="row__title">Why Choose Golden Care?</h2>
+            <div class="row__body">
+              <div class="row__image">
+                <img src="/images/4.webp" alt="" />
+              </div>
+              <div class="row__content custom-ol">
+                <h3>Licensed, Bonded, and Insured</h3>
+                <p>All caregivers are W-2 employees, not contractors, ensuring quality and accountability.</p>
+                <h3>5-Star Rated</h3>
+                <p>Trusted by families across Southwest Florida.</p>
+                <h3>Available 24/7</h3>
+                <p>Flexible hourly or live-in care options tailored to your needs.</p>
+                <p>
+                  Golden Care proudly serves Collier and Lee County, including areas such as Naples, Marco Island,
+                  Bonita Springs, and beyond. Our commitment to compassion, reliability, and excellence ensures your
+                  loved ones receive the highest quality in-home care.
+                </p>
+                <a href="#" class="button">Call Us</a>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       {{> footer}}
     </div>
