refactor: remove BackTopButton component and update related styles and scripts

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -284,7 +284,7 @@
           </div>
         </section>
       </main>
-      {{> ui/back-top-button}} {{> footer}}
+      {{> footer}}
     </div>
     <script>
       const acfData = {
