--- a/pages/landing.html
+++ b/pages/landing.html
@@ -37,10 +37,10 @@
         <section class="row section">
           <div class="row__container container">
             <div class="row__body">
-              <div class="row__image">
+              <div data-aos-delay="100" data-aos="fade-up" class="row__image">
                 <img src="/images/1.webp" alt="" />
               </div>
-              <div class="row__content custom-ol">
+              <div data-aos="fade-up" class="row__content custom-ol">
                 <h2>Private Pay for Home Care</h2>
                 <p>
                   Private Pay offers families the flexibility to get premium, personalized home care services without
@@ -54,22 +54,18 @@
                   <li>Trained, vetted caregivers who are W-2 employees (not contractors).</li>
                   <li>Services tailored to individual needs.</li>
                 </ol>
-                <p>
-                  We are approved by the VA and recognized as representatives to provide home care benefits covered by
-                  the VA for those who qualify.
-                </p>
               </div>
             </div>
           </div>
         </section>
         <section class="row row_reverse section">
           <div class="row__container container">
-            <h2 class="row__title">Long-Term Care Insurance (LTCI)</h2>
+            <h2 data-aos="fade-up" class="row__title">Long-Term Care Insurance (LTCI)</h2>
             <div class="row__body">
-              <div class="row__image">
+              <div data-aos-delay="100" data-aos="fade-up" class="row__image">
                 <img src="/images/2.webp" alt="" />
               </div>
-              <div class="row__content custom-ol">
+              <div data-aos="fade-up" class="row__content custom-ol">
                 <h3>Simplifying Your Care Journey with Long-Term Care Insurance</h3>
                 <p>
                   At Golden Care, we know that navigating Long-Term Care Insurance (LTCI) can feel overwhelming. That’s
@@ -87,8 +83,8 @@
                   <li>We ensure you're maximizing your coverage for the care you need.</li>
                 </ul>
                 <p class="colored">
-                  Let us focus on the details so you can focus on what matters most—your loved one’s comfort and
-                  well-being.
+                  Let us focus on the details so you can focus on what matters <br />
+                  most—your loved one’s comfort and well-being.
                 </p>
               </div>
             </div>
@@ -97,10 +93,10 @@
         <section class="row custom-ol section">
           <div class="row__container container">
             <div class="row__body">
-              <div class="row__image">
+              <div data-aos-delay="100" data-aos="fade-up" class="row__image">
                 <img src="/images/3.webp" alt="" />
               </div>
-              <div class="row__content">
+              <div data-aos="fade-up" class="row__content">
                 <h2>Home Care for Heroes</h2>
                 <p>At Golden Care, we honor our heroes by providing specialized care programs for veterans.</p>
                 <h3>Veterans Benefits May Cover Home Care Services:</h3>
@@ -117,7 +113,7 @@
             </div>
           </div>
         </section>
-        <section class="cta section">
+        <section data-aos="fade-up" class="cta section">
           <div class="cta__container container">
             <div class="cta__body" style="background-image: url(&quot;/images/Group 6.webp&quot;)">
               <div class="cta__content">
@@ -129,7 +125,7 @@
         </section>
         <section class="services section">
           <div class="services__container container">
-            <div class="services__header">
+            <div data-aos="fade-up" class="services__header">
               <h2 class="services__title">Our Home Care Services</h2>
               <p class="services__text">
                 Golden Care offers a comprehensive range of non-medical home care services designed to meet the unique
@@ -138,28 +134,28 @@
               </p>
             </div>
             <section class="services__list">
-              <div class="services__item service">
+              <div data-aos-delay="100" data-aos="fade-up" class="services__item service">
                 <span class="service__icon"></span>
                 <div class="service__content">
                   <h3>Personal Care</h3>
                   <p>Bathing, grooming, toileting, feeding, dressing, ambulation, and injury prevention.</p>
                 </div>
               </div>
-              <div class="services__item service">
+              <div data-aos-delay="200" data-aos="fade-up" class="services__item service">
                 <span class="service__icon service__icon_rb"></span>
                 <div class="service__content">
                   <h3>Homemaker & Companion Care</h3>
                   <p>Meal preparation, grocery shopping, light housekeeping, transportation, and companionship.</p>
                 </div>
               </div>
-              <div class="services__item service">
+              <div data-aos-delay="300" data-aos="fade-up" class="services__item service">
                 <span class="service__icon service__icon_circle"></span>
                 <div class="service__content">
                   <h3>Transitional Care</h3>
                   <p>Assistance with hospital or rehab discharge and recovery at home.</p>
                 </div>
               </div>
-              <div class="services__item service">
+              <div data-aos-delay="400" data-aos="fade-up" class="services__item service">
                 <span class="service__icon service__icon_rt"></span>
                 <div class="service__content">
                   <h3>Alzheimer’s/Dementia Care</h3>
@@ -171,7 +167,7 @@
         </section>
         <section class="testimonials section">
           <div class="testimonials__container container">
-            <h2 class="testimonials__title">What Our Clients Say</h2>
+            <h2 data-aos="fade-up" class="testimonials__title">What Our Clients Say</h2>
             <div class="testimonials__body">
               <div class="testimonials__navigation">
                 <button type="button" class="testimonials__navigation-button testimonials__prev">
@@ -199,7 +195,7 @@
               </div>
               <div class="testimonials__slider swiper-slider" id="testimonials-slider">
                 <div class="testimonials__wrapper swiper-wrapper">
-                  <div class="testimonials__item testimonial swiper-slide">
+                  <div data-aos="fade-up" data-aos-delay="50" class="testimonials__item testimonial swiper-slide">
                     <img src="/images/rating.svg" alt="" class="testimonial__rating" />
                     <p class="testimonial__text">
                       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
@@ -208,7 +204,7 @@
                     <p class="testimonial__name">Name Surname</p>
                     <p class="testimonial__role">Position, Company name</p>
                   </div>
-                  <div class="testimonials__item testimonial swiper-slide">
+                  <div data-aos="fade-up" data-aos-delay="100" class="testimonials__item testimonial swiper-slide">
                     <img src="/images/rating.svg" alt="" class="testimonial__rating" />
                     <p class="testimonial__text">
                       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
@@ -217,7 +213,7 @@
                     <p class="testimonial__name">Name Surname</p>
                     <p class="testimonial__role">Position, Company name</p>
                   </div>
-                  <div class="testimonials__item testimonial swiper-slide">
+                  <div data-aos="fade-up" data-aos-delay="150" class="testimonials__item testimonial swiper-slide">
                     <img src="/images/rating.svg" alt="" class="testimonial__rating" />
                     <p class="testimonial__text">
                       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
@@ -226,7 +222,7 @@
                     <p class="testimonial__name">Name Surname</p>
                     <p class="testimonial__role">Position, Company name</p>
                   </div>
-                  <div class="testimonials__item testimonial swiper-slide">
+                  <div data-aos="fade-up" data-aos-delay="200" class="testimonials__item testimonial swiper-slide">
                     <img src="/images/rating.svg" alt="" class="testimonial__rating" />
                     <p class="testimonial__text">
                       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
@@ -235,7 +231,7 @@
                     <p class="testimonial__name">Name Surname</p>
                     <p class="testimonial__role">Position, Company name</p>
                   </div>
-                  <div class="testimonials__item testimonial swiper-slide">
+                  <div data-aos="fade-up" data-aos-delay="250" class="testimonials__item testimonial swiper-slide">
                     <img src="/images/rating.svg" alt="" class="testimonial__rating" />
                     <p class="testimonial__text">
                       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
@@ -244,7 +240,7 @@
                     <p class="testimonial__name">Name Surname</p>
                     <p class="testimonial__role">Position, Company name</p>
                   </div>
-                  <div class="testimonials__item testimonial swiper-slide">
+                  <div data-aos="fade-up" data-aos-delay="300" class="testimonials__item testimonial swiper-slide">
                     <img src="/images/rating.svg" alt="" class="testimonial__rating" />
                     <p class="testimonial__text">
                       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
@@ -261,12 +257,12 @@
         </section>
         <section class="row row_small-gap section">
           <div class="row__container container">
-            <h2 class="row__title">Why Choose Golden Care?</h2>
+            <h2 data-aos="fade-up" class="row__title">Why Choose Golden Care?</h2>
             <div class="row__body">
-              <div class="row__image">
+              <div data-aos="fade-up" data-aos-delay="100" class="row__image">
                 <img src="/images/4.webp" alt="" />
               </div>
-              <div class="row__content custom-ol">
+              <div data-aos="fade-up" class="row__content custom-ol">
                 <h3>Licensed, Bonded, and Insured</h3>
                 <p>All caregivers are W-2 employees, not contractors, ensuring quality and accountability.</p>
                 <h3>5-Star Rated</h3>
@@ -279,6 +275,27 @@
                   loved ones receive the highest quality in-home care.
                 </p>
                 <a href="#" class="button">Call Us</a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="contacts section" style="background-image: url(&quot;/images/Group 7.webp&quot;)">
+          <div class="contacts__container container">
+            <div data-aos="fade-up" class="contacts__content">
+              <h2>Contact Golden Care for Personalized Home Care</h2>
+              <p>
+                Whether you're looking for private pay options, need help navigating LTCI, or are a veteran exploring
+                your benefits, Golden Care is here to help.
+              </p>
+              <p>
+                <strong>Call us now at <a href="#">(239) 440-2900</a></strong> or fill out the form to schedule your
+                <strong>FREE In-Home Consultation today</strong>.
+              </p>
+            </div>
+            <div data-aos="fade-up" data-aos-delay="100" class="contacts__form">
+              <h3 class="contacts__form-title">Get Started Today</h3>
+              <div class="contacts__form-body">
+                <script type="text/javascript" src="https://form.jotform.com/jsform/251163188409055"></script>
               </div>
             </div>
           </div>
